@@ -1,3 +1,7 @@
+2003/06/13 niteria
+- Implemented Feature 753658: Scan for Project on Opening a Document
+   (Still open question: Ability to switch this off in the options?)
+
 2003/06/05 niteria
 - Implemented Feature 675205: One-Click Project Creation for existing Documents
 - Implemented Feature 588960: Disable build for unsaved files
